--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@prisma/client": "^2.11.0",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
